--- a/adocao.css
+++ b/adocao.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: orange;
+  background-color: orange;
 }
 main {
   display: flex;
@@ -36,11 +36,11 @@ img {
   height: 100%;
   width: 100%;
 }
-.ladoA h2{
+.ladoA h2 {
   margin: 10px 0;
   color: blueviolet;
 }
-.ladoA ul{
+.ladoA ul {
   margin-left: 30px;
   /* background-color: brown; */
 }
@@ -56,7 +56,7 @@ img {
   display: inline;
   /* background-color: rgba(0, 0, 0, 0.8); */
   position: absolute;
-  top: 20%;
+  top: 5%;
   /* left: 70%; */
   /* transform: translate(-10%, -50%); */
   /* padding: 100px; */
@@ -64,18 +64,16 @@ img {
   width: 69%;
   margin-left: 1%;
   background-color: brown;
-  }
+}
 .conteiner h1 {
-  
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   text-align: center;
   font-size: 70px;
 }
-.conteiner h2 { 
-  text-align: center; 
+.conteiner h2 {
+  text-align: center;
   font-size: 40px;
 }
-
 
 .input-campos {
   padding: 10px;
@@ -83,20 +81,25 @@ img {
   height: 100%;
 }
 .input-campos ul {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
   margin-top: 25px;
+  margin-left: 50px;
   list-style: none;
-  height:300px;
-   
-  } 
-  .selecao{
-     margin-left: 2px;
-    
-   }
+  height: 100%;
+}
+small {
+  font-style: italic;
+}
+.selecao {
+  margin-left: 15px;
+  background-color: black;
+}
 
-   .selecao-label{
-     background-color: darkblue ;}
+.selecao-label {
+  /* background-color: darkblue ;*/
+}
+
 .botao {
   /* background-color: dodgerblue;
   padding: 15px;
@@ -106,6 +109,6 @@ img {
   /* font-size: 26px; */
 }
 /* .botao:hover { */
-  /* cursor: pointer; */
-  background-color: rgb(24, 108, 192);
-}
+/* cursor: pointer; */
+/* background-color: rgb(24, 108, 192);
+} */
